<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Fragmento vacío temporalmente. Funcionalidad pensada, falta implementarlo</string>

    <!-- STRING GLOBALES -->
    <string name="app_name">Entertainment Lounge</string>
    <string name="nav_header_title">Entertainment Lounge</string>
    <string name="nav_header_subtitle">Proyecto 2º DAM</string>
    <!-- STRING GLOBALES -->

    <!-- NAVIGATION DRAWER -->
    <string name="menu_profile">Mi perfil</string>
    <string name="menu_verSeries">Explorar</string>
    <string name="menu_recomendaciones">Descubrir</string>
    <string name="menu_misSeries">Mis series</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_sobrenosotros">Sobre nosotros</string>
    <string name="menu_cerrarsesion">Cerrar sesión</string>
    <!-- NAVIGATION DRAWER -->

    <!-- AUTH FRAGMENT -->

    <!-- AUTH FRAGMENT -->

    <!-- REGISTER FRAGMENT -->

    <!-- REGISTER FRAGMENT -->

    <!-- MI PERFIL FRAGMENT -->

    <!-- MI PERFIL FRAGMENT -->

    <!-- MODIFICAR DATOS FRAGMENT -->
    <string name="titleModificar_datos">Modificar datos</string>
    <!-- MODIFICAR DATOS FRAGMENT -->

    <!-- SOBRE NOSOTROS FRAGMENT -->
    <string name="sobrenosotros_presentacion">Este proyecto ha sido realizado por un equipo de única persona, encargado del diseño, programación y comprobación de todas las funciones que componen esta aplicación.</string>
    <string name="sobrenosotros_objetivo">Buscamos que los usuarios de esta aplicación puedan tener un control sencillo e intuitivo de todas las series que van viendo a lo largo del tiempo,
        además de ofrecer la posibilidad de descubrir nuevas series similares a los gustos de los mismos.
        Permitimos además, que puedan charlar con otros usuarios de la red para poder compartir gustos con el resto de la comunidad</string>
    <!-- SOBRE NOSOTROS FRAGMENT -->

</resources>