<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Panel de usuario">
        <menu>
            <group
                android:id="@+id/menu_top"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_user"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_verSeries"
                    android:icon="@drawable/ic_date"
                    android:title="@string/menu_verSeries" />
                <item
                    android:id="@+id/nav_recomendaciones"
                    android:icon="@drawable/ic_lock"
                    android:title="@string/menu_recomendaciones" />
                <item
                    android:id="@+id/nav_misSeries"
                    android:icon="@drawable/ic_lock"
                    android:title="@string/menu_recomendaciones" />
                <item
                    android:id="@+id/nav_chats"
                    android:icon="@drawable/ic_chats"
                    android:title="@string/menu_chats" />
            </group>
        </menu>
    </item>

    <item android:title="Acciones">
        <menu>
            <group
                android:id="@+id/menu_bottom"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_sobrenosotros"
                    android:icon="@drawable/ic_user"
                    android:title="@string/menu_sobrenosotros" />
                <item
                    android:id="@+id/nav_cerrarSesion"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_cerrarsesion" />
            </group>
        </menu>
    </item>

</menu>